<resources>
    <string name="app_name">Sleep</string>
    <string name="track_info">%1$d MIN &#8226; %2$s MUSIC</string>
    <string name="menu_home">Home</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_meditate">Meditate</string>
    <string name="menu_music">Music</string>
    <string name="menu_author">Author</string>
    <string name="header_title">Sleep Stories</string>
    <string name="header_info">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="premium_name">The Ocean Moon</string>
    <string name="premium_info">Non-stop 8-hour mixes of our most popular sleep audio</string>
    <string name="start_button_text">Start</string>
    <string name="category_title">%1$s Music</string>
    <string name="track_favorites">%1$d Favorites</string>
    <string name="track_listening">%1$d Listening</string>
    <string name="track_related">Related</string>
    <string name="track_play">PLAY</string>
    <string name="play_category">%1$s MUSIC</string>
    <string name="play_time">%02d:%02d</string>
    <string name="main_title">Welcome to Sleep</string>
    <string name="main_info">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep.</string>
    <string name="main_button_text">GET STARTED</string>
</resources>