<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_sleep"
        android:icon="@drawable/ic_menu_sleep"
        android:title="@string/menu_sleep" />
    <item
        android:id="@+id/menu_meditate"
        android:icon="@drawable/ic_menu_meditate"
        android:title="@string/menu_meditate" />
    <item
        android:id="@+id/menu_music"
        android:icon="@drawable/ic_menu_music"
        android:title="@string/menu_music" />
    <item
        android:id="@+id/menu_author"
        android:icon="@drawable/ic_menu_author"
        android:title="@string/menu_author" />
</menu>